# MLCompare

./: .gitignore  HISTORY.md  README.md  log_config.json  logging_config.json  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: lint.yml  unit-tests.yml
docs/: conf.py  index.rst  modules.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
docs/source/: conf.py  index.rst  mlcompare.data.data_processor.rst  mlcompare.data.dataset_processor.rst  mlcompare.data.datasets.rst  mlcompare.data.rst  mlcompare.data.split_data.rst  mlcompare.models.models.rst  mlcompare.models.rst  mlcompare.params_reader.rst  mlcompare.pipelines.rst  mlcompare.rst  modules.rst
docs/source/api_reference/: data_processing.rst  datasets.rst  index.rst  models.rst  pipelines.rst  split_data.rst
docs/source/release_notes/: index.rst
mlc/: __init__.py
mlcompare/: __init__.py  params_reader.py  pipeline.py  pipelines.py  processing.py  results_writer.py  types.py
mlcompare/data/: data_processor.py  dataset_processor.py  dataset_validation.py  datasets.py  split_data.py  validation.py
mlcompare/models/: __init__.py  model_validation.py  models.py  validation.py
src/: config.py  main.py  pipeline.py
src/data/: data_exploration.ipynb  data_processing.py  data_processor.py  dataset_parameters.json  dataset_processor.py  dataset_validation.py  download_data.py  kaggle_dataset.py
src/data/saved_data/: restaurant-revenue-prediction-dataset.parquet  restaurant-revenue-prediction-dataset_cleaned.parquet  train_test_split.pkl
src/inference/: random_forest.py
src/models/: model_parameters.json  model_validation.py  xgboost.py
src/tests/: test_data_processor.py  test_kaggle_dataset.py
src/tests/src/data/: test_dataset_validation.py
src/train_test/: data_processing.py
src/training/: __init__.py  random_forest.py
tests/: conftest.py  test_data_processor.py  test_params_reader.py  test_pipelines.py
tests/data/: test_data_processor.py  test_dataset_processor.py  test_datasets.py  test_split_data.py  test_validation.py
tests/models/: test_models.py
