[build-system]
requires = ['hatchling', 'hatch-fancy-pypi-readme>=22.5.0']
build-backend = "hatchling.build"

[project]
name = "mlcompare"
version = "0.1.0"
description = "Compare ML models across different libraries on one or many datasets."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mitchell Medeiros"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23.5,<2.0.0", # for tensorflow compatability
    "pandas[pyarrow]>=2.0.0",
    "pydantic>=2.0.0",
    "plotly>=4.0.0",
    "kaggle>=1.0.0",
]

[project.optional-dependencies]
models = [
    "scikit-learn>=1.5.1",
    "xgboost>=2.1.0",
    "torch>=2.0.0",
    "tensorflow>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]
docs = [
    "sphinx>=7.4.0",
    "sphinx-rtd-theme>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/MitchMedeiros/ml-compare"

[tool.hatch.build.targets.wheel]
packages = ["mlcompare"]

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true

[tool.ruff]
line-length = 99

[tool.ruff.lint]
ignore = ["E741"]
pydocstyle = { convention = 'google' }
