[build-system]
requires = ['hatchling', 'hatch-fancy-pypi-readme>=22.5.0']
build-backend = "hatchling.build"

[project]
name = "mlcompare"
version = "1.0.0"
requires-python = ">=3.10"
description = "Quickly compare machine learning models across libraries and datasets."
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [{name = "Mitchell Medeiros"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Typing :: Typed',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
]
dependencies = [
    "numpy>=1.23.5,<2.0.0", # for OpenML & Tensorflow compatability
    "pandas[pyarrow]>=2.0.0",
    "pydantic>=2.0.0",
    "plotly>=4.0.0",
    "kaggle>=1.0.0",
    "huggingface_hub>=0.21.0",
    "openml>=0.13.0",
    "scikit-learn>=1.5.1",
    "xgboost>=2.1.0",
    "lightgbm>=4.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
models = [
    # "tensorflow>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "ipykernel>=6.0.0",
]
docs = [
    "sphinx==7.3.7",
    "sphinxawesome-theme==5.2.0",
    "sphinx-sitemap==2.6.0",
]

[project.urls]
"Homepage" = "https://github.com/MitchMedeiros/ml-compare"

[tool.hatch.build.targets.wheel]
packages = ["mlcompare"]

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true

[tool.ruff]
line-length = 99

[tool.ruff.lint]
ignore = ["E741"]
pydocstyle = { convention = 'google' }
